Fix top bar positioning on mobile

--- a/src/assets/css/components/top-bar.scss
+++ b/src/assets/css/components/top-bar.scss
@@ -1,6 +1,4 @@
 .top-bar {
-  top: 0;
-  position: absolute;
   color: inherit;
   padding-top: 0.5rem;
   font-size: 0.875rem;
